--- a/config/velodyne.yaml
+++ b/config/velodyne.yaml
@@ -17,13 +17,36 @@ mapping:
     fov_degree:    180
     det_range:     100.0
     extrinsic_est_en:  true      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    extrinsic_T: [ -0.063, 0.38, 1.481]
-    extrinsic_R: [ -0.695231, -0.718554, 0.0182828,
-000.718764, -0.695187, 0.00971333,
-0.00573042, 000.019894, 000.999786]
+# jiashan
+#     extrinsic_T: [ -0.063, 0.38, 1.481]
+#     extrinsic_R: [ -0.695231, -0.718554, 0.0182828,
+# 000.718764, -0.695187, 0.00971333,
+# 0.00573042, 000.019894, 000.999786]
+
+# # shunfeng
+#     extrinsic_T: [ 0.0327720083296299, 0.324569046497345, 1.459749221801758]
+#     extrinsic_R: [ -0.724529, -0.689244, -0.000831056,
+# 0.689244, -0.724529, 00.000776072,
+# -0.00113703, -1.0513e-05, 0.999999]
+
+# # 6
+#     extrinsic_T: [0.009330281056463718, 0.3527710139751434, 1.47389030456543]
+#     extrinsic_R: [-0.693308, -0.720596, -0.00811573,
+# 0.720525, -0.693354, 0.0102264,
+# -0.0129962, 0.00124247, 0.999915]
+
+
+# chengdu
+    extrinsic_T: [0.03310105577111244, 0.3508687317371368, 1.415747165679932]
+    extrinsic_R: [-0.718984, -0.695026, -0.000995166,
+0.695022, -0.718984, 0.00239481,
+-0.00237997, 0.00103017, 0.999997]
+
+
+    
 
 publish:
-    path_en:  false
+    path_en:  true
     scan_publish_en:  true       # false: close all the point cloud output
     dense_publish_en: true       # false: low down the points number in a global-frame point clouds scan.
     scan_bodyframe_pub_en: true  # true: output the point cloud scans in IMU-body-frame
